Note select fix when new line, dropzone height fix, dropzone text short when too close to the border

--- a/src/app/core/components/trailer/trailer-details/trailer-details-item/trailer-details-item.component.scss
+++ b/src/app/core/components/trailer/trailer-details/trailer-details-item/trailer-details-item.component.scss
@@ -169,7 +169,7 @@ app-trailer-details-item {
                 background: rgb(108, 108, 108, 0.2);
             }
 
-            span {
+            span, div {
                 &::-moz-selection {
                     color: $bw6-2;
                     background: rgb(108, 108, 108, 0.2);
