--- a/src/app/core/components/truck/truck-details-card/truck-details-card.component.scss
+++ b/src/app/core/components/truck/truck-details-card/truck-details-card.component.scss
@@ -84,7 +84,7 @@ app-truck-details-card {
                     background: rgb(108, 108, 108, 0.2);
                 }
 
-                span {
+                span, div {
                     &::-moz-selection {
                         color: $bw6-2;
                         background: rgb(108, 108, 108, 0.2);
